# barren-land

./: Cargo.toml  docker-compose.dev.yml  docker-compose.prod.yml  run-client.sh  run-generator.sh  run-server.sh
docker/dev/client/: Dockerfile
docker/dev/generator/: Dockerfile
docker/dev/server/: Dockerfile
docker/prod/client/: Dockerfile
docker/prod/generator/: Dockerfile
docker/prod/server/: Dockerfile
res/: grass_tile.png~
src/: classes.rs  client.rs  client_utils.rs  draw.rs  entities.rs  launcher.rs  lib.rs  main.rs  menu_graphics.rs  queue.rs  render.rs  server.rs  tiles.rs  world.rs
text/: words.txt
web/: package-lock.json  package.json
web/public/res/: ice.png~
web/src/: App.svelte  FlyControls.js  PointerLockControls.js  network.js  render.js  scene.js  start.js  update.js
world/chunks/: chunk_0_0  chunk_0_1  chunk_0_2  chunk_0_3  chunk_0_4  chunk_0_5  chunk_0_6  chunk_0_7  chunk_1_0  chunk_1_1  chunk_1_2  chunk_1_3  chunk_1_4  chunk_1_5  chunk_1_6  chunk_1_7  chunk_2_0  chunk_2_1  chunk_2_2  chunk_2_3  chunk_2_4  chunk_2_5  chunk_2_6  chunk_2_7  chunk_3_0  chunk_3_1  chunk_3_2  chunk_3_3  chunk_3_4  chunk_3_5  chunk_3_6  chunk_3_7  chunk_4_0  chunk_4_1  chunk_4_2  chunk_4_3  chunk_4_4  chunk_4_5  chunk_4_6  chunk_4_7  (+24 more)
