[package]
name = "journey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["json"]}
simdnoise = "3.1.6"
serde = {version = "1.0.131", features = ["derive"]}
serde_json = "1.0.73"
rand = "0.8.4"
futures = "0.1"
tokio = { version = "1", features = ["full"] }
websocket = "0.22.0"
bincode = "1.3.3"
rayon = "1.5.1"
pancurses = "0.17"
actix-web = "4"

[dependencies.sdl2]
version = "0.35.1"
default-features = false
features = ["mixer", "image", "ttf"]
